# M1TER_ANDRE_CLERC_COZZOLINO_2021

./: README.md
M1-TER-2021-master/: CMakeLists.txt
M1-TER-2021-master/DemoTER/: CMakeLists.txt
M1-TER-2021-master/DemoTER/doc/: CMakeLists.txt  Doxyfile.in  mainpage.md
M1-TER-2021-master/DemoTER/include/DemoTER/: BloomFilter.hpp  CheckError.hpp  Environment.hpp  FlatShader.hpp  GuiDrawFunctions.hpp  GuiParams.hpp  LightsSet.hpp  Materials.hpp  MergeShader.hpp  Mesh.hpp  PBRShader.hpp  SkyboxShader.hpp  config.hpp.in
M1-TER-2021-master/DemoTER/include/DemoTER/glwrapper/: CubeMapTexture.hpp  DepthTexture.hpp  Display.hpp  FrameBuffer.hpp  MSDepthTexture.hpp  MSTexture.hpp  Shader.hpp  TexBuffer.hpp  Texture.hpp  VAO.hpp  VBO.hpp
M1-TER-2021-master/DemoTER/include/DemoTER/utils/: Camera.hpp  Mouse.hpp  OrbitCamera.hpp  Parser.hpp  Transform.hpp
M1-TER-2021-master/DemoTER/resources/shaders/: flat.frag  flat.vert  merge.frag  merge.vert  pbr.frag  pbr.vert  skybox.frag  skybox.vert
M1-TER-2021-master/DemoTER/resources/shaders/bloom/: bloom11.frag  bloom11.vert  bloom5.frag  bloom5.vert  bloom9.frag  bloom9.vert  transfer.frag  transfer.vert
M1-TER-2021-master/DemoTER/resources/shaders/env/: brdf.frag  brdf.vert  prefilter.frag  rectToCube.frag
M1-TER-2021-master/DemoTER/src/: BloomFilter.cpp  CheckError.cpp  Environment.cpp  FlatShader.cpp  GuiDrawFunctions.cpp  GuiParams.cpp  LightsSet.cpp  Materials.cpp  MergeShader.cpp  Mesh.cpp  PBRShader.cpp  SkyboxShader.cpp  main.cpp
M1-TER-2021-master/DemoTER/src/glwrapper/: CubeMapTexture.cpp  DepthTexture.cpp  Display.cpp  FrameBuffer.cpp  MSDepthTexture.cpp  MSTexture.cpp  Shader.cpp  TexBuffer.cpp  Texture.cpp  VAO.cpp  VBO.cpp
M1-TER-2021-master/DemoTER/src/utils/: Camera.cpp  Mouse.cpp  OrbitCamera.cpp  Parser.cpp  Transform.cpp
M1-TER-2021-master/glad/: CMakeLists.txt
M1-TER-2021-master/glad/include/glad/: glad.h
M1-TER-2021-master/glad/src/: glad.c
M1-TER-2021-master/imgui/: CMakeLists.txt
M1-TER-2021-master/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp
M1-TER-2021-master/stbimage/: CMakeLists.txt
M1-TER-2021-master/stbimage/src/: stb_image.cpp
